# inline-test

./: Cargo.toml
.github/workflows/: rust.yml
examples/lexer/: Cargo.toml  build.rs
examples/lexer/src/: lib.rs
examples/lexer/test_data/: numbers  numbers.expect
src/: lib.rs
